test/asm/const-not.err
error: Assertion failed
    at const-not.asm(3)
Assembly aborted with 1 error!
